update quiz service
